--- a/lovelace/04_living.yaml
+++ b/lovelace/04_living.yaml
@@ -1,7 +1,7 @@
 title: Гостиная
 icon: mdi:television
 cards:
-  ##################################### 1 столбец
+  ###################################### 1 столбец
   - type: vertical-stack
     cards:
       - type: custom:mini-media-player
